<resources>
    <string name="app_name">AANotifier</string>

    <string name="pref_category_general_setting_title">General settings</string>
    <string name="pref_android_auto_notification_title">Android Auto notification</string>
    <string name="pref_android_auto_notification_summary">Notify Android Auto of this device notifications.</string>
    <string name="pref_app_list_title">Application list</string>
    <string name="pref_app_list_summary">Select the app to notify Android Auto.</string>
    <string name="pref_notification_access_title">Notification access</string>
    <string name="pref_notification_access_summary">Open notification access settings of this app.</string>

    <string name="pref_category_test_setting_title">Settings for test</string>
    <string name="pref_car_mode_notification_title">Android Auto connection detection</string>
    <string name="pref_car_mode_notification_summary">Enable notifications only when connected to Android Auto.</string>
    <string name="pref_car_extender_notification_title">Car extender notification</string>
    <string name="pref_car_extender_notification_summary">Enable car extender notifications.</string>
    <string name="pref_media_session_notification_title">Media session notification</string>
    <string name="pref_media_session_notification_summary">Enable media session notifications.</string>
    <string name="pref_ongoing_notification_title">Ongoing notification</string>
    <string name="pref_ongoing_notification_summary">Enable ongoing notifications.</string>
    <string name="pref_spurious_notification_title">Spurious notification</string>
    <string name="pref_spurious_notification_summary">Keep spurious notifications of this app visible.</string>
    <string name="action_read_title">Mask as Read</string>
    <string name="action_reply_title">Reply</string>
    <string name="pref_notification_setting_title">Notification setting</string>
    <string name="pref_notification_setting_summary">Open notification settings of this app.</string>
    <string name="app_search_hint">Search apps</string>
    <string name="pref_permission_check_title">Notification permission check</string>
    <string name="pref_permission_check_summary">List only apps with notification permission.</string>
</resources>
